[tool.poetry]
name = "test-parser"
version = "0.1.0"
description = ""
authors = ["s1veme <kpdpav@gmail.com>"]
readme = "README.md"
packages = [{include = "test_parser"}]

[tool.poetry.dependencies]
python = "3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.2"
lxml = "^4.9.2"
validators = "^0.20.0"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py39", "py310"]
include = ".py$"
force-exclude = """
migrations
| .venv
| venv
"""


[tool.isort]
profile="black"
line_length=120
extend_skip_glob = [
  "migrations/*",
  ".venv/*",
  "venv/*"
]
